--- a/_posts/2020-06-12-page_test.md
+++ b/_posts/2020-06-12-page_test.md
@@ -13,12 +13,12 @@ Ceci est un commentaire. Code : markdown
 
 # Clac clac
 
-Michelson des familles.
+**Michelson** des familles.
 
 
 ## So why did you decide to do it now.
 
-Let's just say that Club Code's Github has been getting more and more projects and that it would be good time to build on that to easily present it to the next 1A (first years students).
+Let's just say that ***Club Code's Github*** has been getting more and more *projects* and that it would be good time to build on that to easily present it to the next 1A (first years students).
 {: .text-justify}
 {% comment%}
 De base texte aligné à gauche, pour avoir justifié car plus joli. Le faire à chaque paragraphe. Sinon, faire une page HTML 
