Avec des includes

--- a/_posts/2020-06-12-pdf.md
+++ b/_posts/2020-06-12-pdf.md
@@ -12,6 +12,8 @@ tags:
 
 [Lien du PDF](/assets/pdf/entretiens_techniques.pdf)
 
-<object class="pdf fitvidsignore" data="/assets/pdf/entretiens_techniques.pdf" type="application/pdf"></object>
+{% include pdf src="/assets/pdf/entretiens_techniques.pdf" %}
 
 Et tout se passe bien
+
+
