--- a/_posts/2020-08-12-video.md
+++ b/_posts/2020-08-12-video.md
@@ -15,15 +15,16 @@ On a deux types de vidéo :
 
 [Lien de la vidéo localement](/assets/videos/a_moi_vous_me_dites.mp4)
 
-<div class="video">
-	<object data="/assets/videos/a_moi_vous_me_dites.mp4"></object>
-</div>
+{% include video src="/assets/videos/a_moi_vous_me_dites.mp4" %}
 
 ## Vidéos externes type youtube
 
 [Lien de youtube](https://www.youtube.com/watch?v=dQw4w9WgXcQ)
 
-<iframe src="https://www.youtube.com/embed/dQw4w9WgXcQ"></iframe>
-
+{% include externalVideo src="https://www.youtube.com/embed/dQw4w9WgXcQ" %}
 
 Il faut bien faire gaffe au lien pour youtube, c'est `https://www.youtube.com/embed/ID_DE_LA_VIDEO`
+
+Sinon je propose avec l'ID seulement (pour youtube, regarder la différence sur le code)
+
+{% include youtube id="dQw4w9WgXcQ" %}
