--- a/_posts/LP/LP17.md
+++ b/_posts/LP/LP17.md
@@ -1,5 +1,5 @@
 ---
- title: "LP17 : Rayonnement d'équilibre thermique. Corps noir."
+ title: "LP17 : Rayonnement d'equilibre thermique. Corps noir."
  date:   2021-03-31 15:55:00 +0100
  categories:
    - Leçon
