--- a/_posts/LC/Manips/021-04-22-LC19CR.md
+++ b/_posts/LC/Manips/021-04-22-LC19CR.md
@@ -1,15 +1,22 @@
 ---
-title: "Manip Calorimetrie : Mesure de l'enthalpie standard de réaction entre HO- et H3O+"
-date:   2021-04-22 7:55:00 +0100
+title: "LC19 : Application du premier principe de la thermodynamique à la récation chimique"
+date:   2021-04-22 8:55:00 +0100
 categories:
-  - Manip Chimie
+  - Leçons de Chimies 2021
 tags:
   - Enthalpie standard de réaction
   - Calorimétrie
+  - Température de flamme
 ---
 
-# Utile pour la leçon LC19
+# Le debut du compte rendu de cette leçon
 
-[Lien du PDF](assets/pdf/Enthalpiecalorimétre_CACAB_p129.pdf)
+[Lien du PDF](assets/pdf/LC19___Application_du_premier_principe_de_la_thermodynamique___la_r_action_chimique.pdf)
 
-{% include pdf src="/assets/pdf/Enthalpiecalorimétre_CACAB_p129.pdf" %}
+{% include pdf src="/assets/pdf/LC19___Application_du_premier_principe_de_la_thermodynamique___la_r_action_chimique.pdf" %}
+
+# Le diapo en format PDF associé, à compléter
+
+[Lien du PDF](assets/pdf/LC19___Application_du_premier_principe_de_la_thermodynamique___la_r_action_chimique.pdf)
+
+{% include pdf src="/assets/pdf/LC19___Application_du_premier_principe_de_la_thermodynamique___la_r_action_chimique.pdf" %}
