Update and rename 021-04-22-LC19CR.md to 2021-04-22-LC19CR.md

--- a/_posts/LC/Manips/2021-04-22-LC19CR.md
+++ b/_posts/LC/Manips/2021-04-22-LC19CR.md
@@ -17,6 +17,6 @@ tags:
 
 # Le diapo en format PDF associé, à compléter
 
-[Lien du PDF](assets/pdf/LC19___Application_du_premier_principe_de_la_thermodynamique___la_r_action_chimique.pdf)
+[Lien du PDF](assets/pdf/Diapo_LC19.pdf)
 
-{% include pdf src="/assets/pdf/LC19___Application_du_premier_principe_de_la_thermodynamique___la_r_action_chimique.pdf" %}
+{% include pdf src="/assets/pdf/Diapo_LC19.pdf" %}
